<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">图书管理系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="forget_password">忘记密码？</string>
    <string name="bms">贵州大学图书管理系统</string>
    <string name="welcome">欢迎你： 管理员！</string>
    <string name="icon_add">添加图书</string>
    <string name="icon_modify">修改图书</string>
    <string name="icon_seek">查询检索</string>
    <string name="icon_borrow">办理借书</string>
    <string name="icon_return">办理还书</string>
    <string name="icon_manage">借书人管理</string>
    <string name="icon_set">系统设置</string>
    <string name="icon_impressum">版本信息</string>
    <string name="input_your_account">输入您的账号</string>
    <string name="input_your_password">输入您的密码</string>
    <string name="login_right_now">立即登录</string>
    <string name="main_copyright">图书管理系统  c 版权所有</string>
    <string name="username_not_null">用户名不能为空！</string>
    <string name="password_not_null">密码不能为空！</string>
    <string name="username_or_password_error">用户名或密码不正确！</string>
    <string name="user_not_exist">该用户不存在</string>
    <string name="login_success">登录成功！</string>
    <string name="version_infomation">版本信息</string>
    <string name="system_setting">系统设置</string>
    <string name="remenber_password">记住密码</string>

    <string name="ir">信息检索</string>
    <string name="btn_menu">menu</string>
    <string name="tv_bookrefer">图书查询</string>
    <string name="tv_borrow_refer">借书人查询</string>
    <string name="tv_check">点击选择查询方式:</string>
    <string name="tv_title_check">选择查询方式:</string>
    <string name="tv_seekinfomation">查询信息</string>
    <string name="btn_beginseek">开始查询</string>
    <string name="tv_student_id">学号</string>
    <string name="btn_ensure">确定</string>
    <string name="btn_cancle">取消</string>
    <string name="tv_checkbyauthor">按作者名查询</string>

    <string name="add_book">添加图书</string>
    <string name="book_name">图书名称：</string>
    <string name="major">专业领域：</string>
    <string name="book_number">图书编号：</string>
    <string name="price">价\u0020\u0020\u0020\u0020\u0020\u0020\u0020格：</string>
    <string name="author">作\u0020\u0020\u0020\u0020\u0020\u0020\u0020者：</string>
    <string name="press">出\u0020\u0020版\u0020\u0020社：</string>
    <string name="exist_state">流通状态：</string>
    <string name="zai_jia">在架</string>
    <string name="jie_chu">借出</string>
    <string name="add">添  加</string>
    <string name="return_step">返  回</string>
    <string name="book_list">图书列表</string>
    <string name="click_again_exit_program">再次点击退出程序！</string>
    <string name="check">检测</string>
    <string name="user_number">借书人学号：</string>
    <string name="banli_jieshu">办理借书</string>
    <string name="banli_huanshu">办理还书</string>
    <string name="jiaona_fakuan">缴纳罚款</string>
    <string name="confirm_banli_huanshu">确认办理还书</string>
    <string name="information_search">信息检索</string>
    <string name="search_book">查询图书</string>
    <string name="select_search_ways">选择查询方式：</string>
    <string name="search_by_author">按作者名查询</string>
    <string name="change">切换</string>
    <string name="input_search_info">输入查询信息：</string>
    <string name="start_search_book">开始查询图书</string>
    <string name="search_user">查询借书人</string>
    <string name="input_user_code">输入借书人编号：</string>
    <string name="start_search_user">开始查询借书人</string>
    <string name="search_by_major">按专业领域查询</string>
    <string name="search_by_bookname">按图书名称查询</string>
    <string name="query_result_list">查询结果</string>
    <string name="query_info_result">查询信息结果</string>
    <string name="querying_wait_moment">正在查询中！请稍候...</string>
    
    <string name="app_description">1、具有新进图书基本信息的录入、已有信息的修改、撤销图书信息的删除功能。\n
2、图书信息的查询（按作者名、专业领域检索，找出某读者的借阅信息、某本书的流通情况等）\n
3、为借书人办理注册。\n
4、办理借、还书手续\n
5、有关信息保存在文件中。\n
6、要有信息描述，如图书名称、专业领域、图书编号、单价、作者、出版社、存在状态、借书人姓名、性别、学号等\n
7、借书数量不超过10本，借期不超过60天，过期罚款，罚款未清时不能再借。\n</string>

    <string name="develop_info">项目统筹：【冯盼】\n\n
项目策划：【杨纪】\n\n成员：【杨纪】	【曾翔宇】		【冯盼】\n\n模块名称\u0020\u0020\u0020\u0020\u0020\u0020\u0020负责人\n\n
项目需求与策划	【杨纪】\n\n
数据库业务实现	【杨纪】\n\n
登录界面及其业务	【曾翔宇】\n\n
主界面及其业务	【杨纪】\n\n
修改图书界面及其业务	【曾翔宇】\n\n
信息检索界面及其业务	【杨纪】\n\n
办理借书界面及其业务	【杨纪】\n\n
办理还书界面及其业务	【曾翔宇】\n\n
借书人注册界面及其业务	【曾翔宇】\n\n
版本信息界面及其业务	【曾翔宇】\n\n
后期统筹及测试	【冯盼】\n
</string>

	<string name="develop_thank">
\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020【舒丹老师】	\n\n
\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020【百度图片】\n\n
	    </string>
</resources>
