<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/app_bg">

    <ImageView
        android:id="@+id/enter_logoimg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_start_" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/enter_logoimg"
        android:layout_marginTop="20dp"
        android:background="#2790CA"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/enter_input_account_et"
            style="@style/input_edit"
            android:background="@drawable/enter_background"
            android:hint="@string/input_your_account"
            android:inputType="textEmailAddress"
             />

        <EditText
            android:id="@+id/enter_input_password_et"
            style="@style/input_edit"
            android:background="@drawable/enter_background"
            android:hint="@string/input_your_password"
            android:inputType="textPassword"
            />
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginTop="5dp"
            >
            <CheckBox 
                android:id="@+id/enter_rembpwd_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:checked="true"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/remenber_password"/>
            
            <TextView
	            android:id="@+id/enter_forget_password_tx"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:gravity="right"
	            android:text="@string/forget_password" />
        </LinearLayout>

        <Button
            android:id="@+id/enter_login_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@drawable/input_login_btn_select"
            android:text="@string/login_right_now" />
    </LinearLayout>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:text="@string/main_copyright"/>

</RelativeLayout>