<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/app_bg">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:background="@color/app_topmenu_bg">
        <ImageView 
            android:id="@+id/addbook_previous_img"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:src="@drawable/all_previous_step_select"/>
        <TextView 
            android:id="@+id/addbook_title_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_book"
            android:textSize="20sp"
            android:layout_weight="7"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            />
        <ImageView 
            android:id="@+id/addbook_menu_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/all_menu_select"/>
    </LinearLayout>
    
    
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:orientation="horizontal">
       <TextView 
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:text="@string/book_name"
           android:textSize="18sp"
           android:textColor="@color/item_blue"/>
       <EditText 
           android:id="@+id/addbook_name_et"
           android:layout_width="match_parent" 
           android:layout_height="wrap_content"
           android:inputType="text"
           android:paddingLeft="5dp"
           android:background="@drawable/all_input_edittext_select"/>
   </LinearLayout> 
   
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:orientation="horizontal">
       <TextView 
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:text="@string/major"
           android:textSize="18sp"
           android:textColor="@color/item_blue"/>
       <EditText 
           android:id="@+id/addbook_major_et"
           android:layout_width="match_parent" 
           android:layout_height="wrap_content"
           android:inputType="text"
           android:paddingLeft="5dp"
           android:background="@drawable/all_input_edittext_select"/>
   </LinearLayout> 
   
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:orientation="horizontal">
       <TextView 
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:text="@string/book_number"
           android:textSize="18sp"
           android:textColor="@color/item_blue"/>
       <EditText 
           android:id="@+id/addbook_code_et"
           android:layout_width="match_parent" 
           android:layout_height="wrap_content"
           android:inputType="number"
           android:paddingLeft="5dp"
           android:background="@drawable/all_input_edittext_select"/>
   </LinearLayout>
   
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:orientation="horizontal">
       <TextView 
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:text="@string/price"
           android:textSize="18sp"
           android:textColor="@color/item_blue"/>
       <EditText 
           android:id="@+id/addbook_price_et"
           android:layout_width="match_parent" 
           android:layout_height="wrap_content"
           android:inputType="numberSigned"
           android:paddingLeft="5dp"
           android:background="@drawable/all_input_edittext_select"/>
   </LinearLayout>
   
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:orientation="horizontal">
       <TextView 
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:text="@string/author"
           android:textSize="18sp"
           android:textColor="@color/item_blue"/>
       <EditText 
           android:id="@+id/addbook_author_et"
           android:layout_width="match_parent" 
           android:layout_height="wrap_content"
           android:inputType="text"
           android:paddingLeft="5dp"
           android:background="@drawable/all_input_edittext_select"/>
   </LinearLayout>
   
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:orientation="horizontal">
       <TextView 
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:text="@string/press"
           android:textSize="18sp"
           android:textColor="@color/item_blue"/>
       <EditText 
           android:id="@+id/addbook_press_et"
           android:layout_width="match_parent" 
           android:layout_height="wrap_content"
           android:inputType="text"
           android:paddingLeft="5dp"
           android:background="@drawable/all_input_edittext_select"/>
   </LinearLayout>
   
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:orientation="horizontal">
       <TextView 
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:text="@string/exist_state"
           android:textSize="18sp"
           android:textColor="@color/item_blue"/>
       <RadioGroup 
           android:id="@+id/addbook_exist_state_rg"
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content"
           android:orientation="horizontal">
	       <RadioButton 
	           android:id="@+id/addbook_exist_rb"
	           android:layout_width="wrap_content" 
	           android:layout_height="wrap_content"
	           android:checked="true"
	           android:layout_marginRight="10dp"
	           android:textColor="@color/black"
	           android:text="@string/zai_jia"/>
	       <RadioButton 
	           android:id="@+id/addbook_not_exist_rb"
	           android:layout_width="wrap_content" 
	           android:layout_height="wrap_content"
	           android:textColor="@color/black"
	           android:text="@string/jie_chu"/>
       </RadioGroup>
   </LinearLayout>
   
   
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:layout_gravity="end"
       android:paddingTop="30dp"
       android:orientation="horizontal">
       <Button
            android:id="@+id/addbook_add_btn"
            android:layout_marginRight="2dp"
            style="@style/oprate_blue_button"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/add" />
       <Button
            android:id="@+id/addbook_return_btn"
            style="@style/oprate_blue_button"
            android:layout_marginLeft="2dp" 
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/return_step" />
   </LinearLayout>
   

</LinearLayout>
