<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="6"
        android:background="#C9D838" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/img_ir" />

        <TextView
            android:id="@+id/title_ir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/ir"
            android:textSize="16dp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_menu_background"
            android:text="@string/btn_menu" />
    </RelativeLayout>
<View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="#1160BD" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#D9D9D9" >

            <TextView
                android:id="@+id/bookrefer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="#DB46DF"
                android:text="@string/tv_bookrefer" />

            <TextView
                android:id="@+id/tv_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/bookrefer"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/tv_check" />

            <Button
                android:id="@+id/button2"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@id/tv_check"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/tv_check"
                android:background="@drawable/btn_check_background" />

            <TextView
                android:id="@+id/tv_seekinfomation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_check"
                android:layout_below="@+id/tv_check"
                android:layout_marginTop="20dp"
                android:text="@string/tv_seekinfomation" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_seekinfomation"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/tv_seekinfomation"
                android:background="@drawable/enter_background"
                android:hint="请输入查询的内容"
                android:inputType="textPassword"
                android:textSize="12sp" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btn_beginseek"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:background="@drawable/btn_beginseek_background"
                android:text="@string/btn_beginseek" />
        </RelativeLayout>

        

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#DFDFDF" >

            <TextView
                android:id="@+id/tv_borrow_refer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="#DB46DF"
                android:text="@string/tv_borrow_refer" />

            <TextView
                android:id="@+id/tv_seekinfomation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_borrow_refer"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/tv_student_id" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_seekinfomation"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/tv_seekinfomation"
                android:background="@drawable/enter_background"
                android:hint="请输入学号"
                android:inputType="textPassword"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_beginseek"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:background="@drawable/btn_beginseek_background"
                android:text="@string/btn_beginseek" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>